...
                        }
                    }
                    .padding()
                    Button("Logout") {
                        logoutViewModel.logoutUser()
                    }
                    .accessibilityIdentifier("logoutButton")
                    .padding()
                    .frame(width: 100, height: 40, alignment: .center)
                    .background(colorTheme.primaryColor)
                    .foregroundColor(.white)
                    .cornerRadius(8)
                }
...
